# Numerical-labs

./: .gitignore  CMakeLists.txt  README.md
LinAlgLib/: CMakeLists.txt
LinAlgLib/matrix/: CMakeLists.txt  crutch.cpp  matrix.hpp
LinAlgLib/matrix/test/: CMakeLists.txt  main.cpp
Tasks/: CMakeLists.txt
Tasks/Cauchy/: CMakeLists.txt  c_funcs.h  first.cpp  second.cpp
Tasks/Cube_spline/: CMakeLists.txt  funcs.h  main.cpp
Tasks/Differential/: CMakeLists.txt  diff_funcs.h  main.cpp
Tasks/Gauss_Method/: CMakeLists.txt  data.txt  funcs.h  main.cpp
Tasks/Integy/: CMakeLists.txt  integ_func.h  main.cpp
Tasks/Interpolation/: CMakeLists.txt  funcs.h  main.cpp
Tasks/MNK/: CMakeLists.txt  funcs.h  main.cpp
Tasks/ODU2/: CMakeLists.txt  main.cpp  odu_funcs.h
Tasks/Power_method/: CMakeLists.txt  data.txt  funcs.h  main.cpp
Tasks/Rotate_method/: CMakeLists.txt  data.txt  funcs.h  main.cpp
Tasks/Simple_iteration_method/: CMakeLists.txt  funcs.h  main.cpp
Tasks/Thomas_Method/: CMakeLists.txt  data.txt  main.cpp
Tasks/Zeidel_method/: CMakeLists.txt  data.txt  funcs.h  main.cpp
Tasks/nonlinear_equation/: CMakeLists.txt  funcs.h  main.cpp
Tasks/nonlinear_system/: CMakeLists.txt  funcs.h  main.cpp
